# soundscribe

./: .env.example  .gitignore  README.md  diagnose_voice.py  generate_invite.py  network_test.py  pyproject.toml  run_bot.py  setup_check.py  test_imports.py  try_discordpy.py
src/soundscribe/: __init__.py  bot.py  server.py
src/soundscribe/audio/: mixer.py  recorder.py  sinks.py
src/soundscribe/commands/: recording.py
